Reduce h1,rm link underline,fix cropping of stores

--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,7 @@
   --colorBlack1: #3A3A3A;
   --colorBlack2: #1A1A1B;
   --colorBlack3: #101010;
-  --colorRed1: #FF5733 ;
+  --colorRed1: #DF2935 ;
   --colorGreen1: #4caf50;
   --colorBlue1: #1E90FF;
   --colorBlue2: #384aa7;
@@ -71,7 +71,7 @@ h1 {
   font-size: 2.8rem;
   font-family: "Spartan MB", sans-serif;
   font-weight: 500;
-  font-size: clamp(2.8rem, 2.5vw, 3.7rem);
+  font-size: clamp(2.6rem, 2.3vw, 3.4rem);
   color: #fff;
   padding: 24px 16px;
 }
@@ -104,6 +104,7 @@ p {
 
 .blueLink{
   color: var(--colorBlue1);
+  text-decoration: none;
 }
 
 .btn {
